--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -36,7 +36,7 @@
 .nav-links {
     list-style-type: none; /* 기본 리스트 스타일 (점)을 제거 */
     padding: 0; /* 기본 패딩 제거 */
-    margin: 0; /* 기본 마진 제거 */
+    margin: 0;
 
     font-weight: 100;
 
