--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,3 +11,24 @@
     animation: gradient 3s linear infinite;
 }
 
+.floating-image {
+    position: absolute;
+    top: 20%;
+    right: 80%;
+    width: 100%;
+    height: auto;
+    animation: floatAnimation 15s ease-in-out infinite;
+    opacity: 0.7;
+}
+
+@keyframes floatAnimation {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(-20px) rotate(90deg);
+    }
+    100% {
+        transform: translateY(0px) rotate(0deg);
+    }
+}
