--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,8 @@ body, html {
 }
 /* 스크롤바 너비 설정 */
 .scrollbar-hide::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
+  height: 5px;
 }
 
 /* 스크롤바 트랙 (배경) */
